<resources>
    <string name="app_name">Book</string>
    <string name="new_guy">New Guy</string>
    <string name="old_user">Old User</string>
    <string name="exit">Exit</string>
    <string name="confirm">Confirm</string>
    <string name="book_btn">Book</string>
    <string name="me_btn">Me</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_panel">Id</string>
    <string name="password_panel">Password</string>
    <string name="center_book">Book</string>
    <string name="center_me">Me</string>
</resources>
