<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/first"
        android:text="@string/new_guy"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        style=""/>
    <Button
        android:id="@+id/old"
        android:text="@string/old_user"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        style="?attr/borderlessButtonStyle"/>
    <Button
        android:id="@+id/exit"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        style="?attr/borderlessButtonStyle"/>
</LinearLayout>
